Added new page User registraion

--- a/Views/Shared/_BeforeLoginLayout.cshtml
+++ b/Views/Shared/_BeforeLoginLayout.cshtml
@@ -8,6 +8,8 @@
     @*Attaching the external css file*@
     <link href="~/css/beforelayout.css" rel="stylesheet" />
 
+    <link href="~/css/userregistration.css" rel="stylesheet" />
+
     @*attaching all the bootstrap liabraries*@
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/lib/bootstrap/dist/css/bootstrap.rtl.min.css" rel="stylesheet" />
@@ -106,7 +108,7 @@
         <div class="row">
             <div class="col-sm-2"></div>
             <div class="col-sm-10">
-                <table class="table table-borderless table-hover">
+                <table class="table table-borderless table-hover table-sm">
                     <thead>
                         <tr>
                             <th><h5><u>Important Links</u></h5></th>
